RESOLVED FIXED58528
Web Inspector: Content area highlight does not cover scrollbars
https://bugs.webkit.org/show_bug.cgi?id=58528
Summary Web Inspector: Content area highlight does not cover scrollbars
Alexander Pavlov (apavlov)
Reported 2011-04-14 04:48:43 PDT
Scenario 1: 1. Go to a page with an overflow:auto div. (I did it in w3schools tryit editor). 2. Open developer tools. 3. Browse to the DOM element in developer tools, look at the highlight on the web page. The highlight does not cover the scrollbars (which also count towards the content area). Upstreaming http://code.google.com/p/chromium/issues/detail?id=51314 Scenario 2: 1. Visit example URL (http://jsfiddle.net/54fAZ/) 2. Inspect the div in the result box, and open the Metrics view. In the Elements/Metrics pane, the content box of the diagram is marked as 50x50 -- the content box is actually 10x10, the border box is 50x50. Upstreaming http://code.google.com/p/chromium/issues/detail?id=78660
Attachments
[PATCH] Suggested fix (1.24 KB, patch)
2011-04-14 09:35 PDT, Alexander Pavlov (apavlov)
pfeldman: review-
[PATCH] With ChangeLog (1.83 KB, patch)
2011-04-14 09:37 PDT, Alexander Pavlov (apavlov)
pfeldman: review+
[IMAGE] The fixed highlight screenshot (3.36 KB, image/png)
2011-04-14 09:42 PDT, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2011-04-14 09:34:11 PDT
The Scenario 2 will be fixed as a separate issue.
Alexander Pavlov (apavlov)
Comment 2 2011-04-14 09:35:33 PDT
Created attachment 89594 [details] [PATCH] Suggested fix
Pavel Feldman
Comment 3 2011-04-14 09:37:09 PDT
Comment on attachment 89594 [details] [PATCH] Suggested fix ChangeLog is missing.
Alexander Pavlov (apavlov)
Comment 4 2011-04-14 09:37:44 PDT
Created attachment 89595 [details] [PATCH] With ChangeLog
Alexander Pavlov (apavlov)
Comment 5 2011-04-14 09:42:19 PDT
Created attachment 89596 [details] [IMAGE] The fixed highlight screenshot
Alexander Pavlov (apavlov)
Comment 6 2011-04-14 09:48:01 PDT
Note You need to log in before you can comment on or make changes to this bug.