2011-04-14  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Content area highlight does not cover scrollbars
        https://bugs.webkit.org/show_bug.cgi?id=58528

        * inspector/DOMNodeHighlighter.cpp:
        (WebCore::DOMNodeHighlighter::DrawNodeHighlight):

Canonical link: https://commits.webkit.org/73621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83865 268f45cc-cd09-0410-ab3c-d52691b4dbfc